unpackaged/main/default/objects/Account_Plan_Contact__c/Account_Plan_Contact__c.object-meta.xml
<CustomObject>
    <label>Account Plan Contact</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Account Plan Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>