unpackaged/main/default/objects/Account_Plan_Contact__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>Account Plan Contacts</relationshipLabel>
    <relationshipName>Account_Plan_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>