unpackaged/main/default/objects/Account_Plan_Contact__c/fields/Merchant_Account_Plan1__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account_Plan1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>Account Plan Contacts (Merchant Account Plan)</relationshipLabel>
    <relationshipName>Account_Plan_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>