unpackaged/main/default/objects/Account_Plan_Contact__c/fields/Quality_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Relationship__c</fullName>
    <inlineHelpText>1 - Strong Personal Relationship 
2 - Strong Business Relationship 
3 - Healthy Relationship, Irregular Meetings 
4 - Transactional, Need to Meet Basis 
5 - Poor Relationship, Negative Association</inlineHelpText>
    <label>Quality of Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>